--- a/index.html
+++ b/index.html
@@ -3,6 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="密にならずに今、会いに行ける――リモートで握手会を再現したWebサービス「Re:Meet LIVE」（リミートライブ）">
+  <meta property="og:site_name" content="Re:MEET LIVE | リモートでミートしてLIVEで応援">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://remeet.live">
+  <meta property="og:title" content="Re:MEET LIVE | リモートでミートしてLIVEで応援">
+  <meta property="og:description" content="密にならずに今、会いに行ける――リモートで握手会を再現したWebサービス「Re:Meet LIVE」（リミートライブ）">
+  <meta property="og:image" content="https://remeet.live/ogp.png">
+  <meta property="fb:app_id" content="2627859857496859">
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:site" content="@remeetlive">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-title" content="remeet">
+  <meta name="theme-color" content="#fff">
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
   <title>Re:Meet Live presents CHANNEL UP!! #3 07.04 SAT 14:30 START</title>
   <style>
     * {
