--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="密にならずに今、会いに行ける――リモートで握手会を再現したWebサービス「Re:Meet LIVE」（リミートライブ）">
-  <meta property="og:site_name" content="Re:MEET LIVE | リモートでミートしてLIVEで応援">
+  <meta name="description" content="2019年11月メトロシティな渋谷で出会った3人がこの夏、リミートデビュー。渋谷から世界へ「問い繋げる」をテーマに頑張る人を応援します！">
+  <meta property="og:site_name" content="QWS BOYS | Re:Meet Live presents CHANNEL UP!! #3">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://remeet.live">
-  <meta property="og:title" content="Re:MEET LIVE | リモートでミートしてLIVEで応援">
-  <meta property="og:description" content="密にならずに今、会いに行ける――リモートで握手会を再現したWebサービス「Re:Meet LIVE」（リミートライブ）">
-  <meta property="og:image" content="https://remeet.live/ogp.png">
+  <meta property="og:url" content="http://channelup.remeet.live/">
+  <meta property="og:title" content="QWS BOYS | Re:Meet Live presents CHANNEL UP!! #3">
+  <meta property="og:description" content="2019年11月メトロシティな渋谷で出会った3人がこの夏、リミートデビュー。渋谷から世界へ「問い繋げる」をテーマに頑張る人を応援します！">
+  <meta property="og:image" content="http://channelup.remeet.live/ogp.png">
   <meta property="fb:app_id" content="2627859857496859">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:site" content="@remeetlive">
