--- a/index.html
+++ b/index.html
@@ -27,10 +27,31 @@
       width: 100%;
       height: auto;
     }
+    .btn {
+      width: 245px;
+      margin: 0 auto;
+    }
   </style>
 </head>
 <body>
   <img src="/assets/top.png" alt="">
   <img src="/assets/event.png" alt="">
   <img src="/assets/about.png" alt="">
+  <div style="text-align: center;line-height:3em">
+    <div class="btn">
+      <a href="https://event.remeet.live/channelup0704/zac">
+        <img src="/assets/btn_zac.png" alt="ザックの会場に入る" width="100%" height="auto">
+      </a>
+    </div>
+    <div class="btn">
+      <a href="https://event.remeet.live/channelup0704/jSdwgRqa">
+        <img src="/assets/btn_shun2.png" alt="シュンシュンの会場に入る" width="100%" height="auto">
+      </a>
+    </div>
+    <div class="btn">
+      <a href="https://event.remeet.live/channelup0704/tai-chan">
+        <img src="/assets/btn_tai.png" alt="たいちゃんの会場に入る" width="100%" height="auto">
+      </a>
+    </div>
+  </div>
   <a href="https://playground.remeet.live/" target="_blank"><img src="/assets/playground.png" alt=""></a>
